# event-registry-data-collector

./: .gitignore  QUERIES.md  README.md  pyproject.toml
collector/: __main__.py  cli.py  client.py  query.py  storage.py
docs/superpowers/plans/: 2026-06-10-flexible-queries.md
docs/superpowers/specs/: 2026-06-10-flexible-queries-design.md
examples/: README.md  advanced_kitchen_sink.json  category_filter.json  concept_boolean.json  date_filter.json  eu_presidency.json  keyword_basic.json  multiple_sources.json  slovenian_sources.json  source_lang_filter.json
queries/: eu_presidency.json
scripts/: backfill.py  cronjob.sh  sources.txt.example
tests/: test_backfill.py  test_cli.py  test_client.py  test_query.py  test_storage.py
